--- a/src/output.css
+++ b/src/output.css
@@ -9,16 +9,14 @@
       "Courier New", monospace;
     --color-red-600: oklch(57.7% 0.245 27.325);
     --color-red-700: oklch(50.5% 0.213 27.518);
-    --color-sky-500: oklch(68.5% 0.169 237.323);
     --color-blue-500: oklch(62.3% 0.214 259.815);
     --color-blue-600: oklch(54.6% 0.245 262.881);
+    --color-pink-700: oklch(52.5% 0.223 3.958);
     --spacing: 0.25rem;
     --text-lg: 1.125rem;
     --text-lg--line-height: calc(1.75 / 1.125);
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
-    --text-3xl: 1.875rem;
-    --text-3xl--line-height: calc(2.25 / 1.875);
     --font-weight-bold: 700;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -196,15 +194,6 @@
   .mx-auto {
     margin-inline: auto;
   }
-  .table {
-    display: table;
-  }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .resize {
-    resize: both;
-  }
   .list-inside {
     list-style-position: inside;
   }
@@ -214,22 +203,12 @@
   .list-disc {
     list-style-type: disc;
   }
-  .list-image-\[url\(\/img\/checkmark\.png\)\] {
-    list-style-image: url(/img/checkmark.png);
-  }
-  .list-image-\[url\(https\:\/\/www\.google\.com\/url\?sa\=i\&url\=https\%3A\%2F\%2Fimgbin\.com\%2Ffree-png\%2Fgreen-tick\&psig\=AOvVaw1Y8ERQTcH1K2Eka9tGrJmV\&ust\=1756644387678000\&source\=images\&cd\=vfe\&opi\=89978449\&ved\=0CBUQjRxqFwoTCJD78bzIso8DFQAAAAAdAAAAABAj\)\] {
-    list-style-image: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fimgbin.com%2Ffree-png%2Fgreen-tick&psig=AOvVaw1Y8ERQTcH1K2Eka9tGrJmV&ust=1756644387678000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCJD78bzIso8DFQAAAAAdAAAAABAj);
-  }
   .space-y-2 {
     :where(& > :not(:last-child)) {
       --tw-space-y-reverse: 0;
       margin-block-start: calc(calc(var(--spacing) * 2) * var(--tw-space-y-reverse));
       margin-block-end: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-y-reverse)));
     }
-  }
-  .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
   }
   .bg-blue-500 {
     background-color: var(--color-blue-500);
@@ -242,10 +221,6 @@
   }
   .text-center {
     text-align: center;
-  }
-  .text-3xl {
-    font-size: var(--text-3xl);
-    line-height: var(--tw-leading, var(--text-3xl--line-height));
   }
   .text-lg {
     font-size: var(--text-lg);
@@ -262,21 +237,14 @@
   .text-blue-600 {
     color: var(--color-blue-600);
   }
+  .text-pink-700 {
+    color: var(--color-pink-700);
+  }
   .text-red-700 {
     color: var(--color-red-700);
   }
   .italic {
     font-style: italic;
-  }
-  .underline {
-    text-decoration-line: underline;
-  }
-  .decoration-sky-500 {
-    text-decoration-color: var(--color-sky-500);
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
   }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
@@ -295,24 +263,17 @@
     }
   }
 }
+:root {
+  --color-brand: #082f49;
+}
 @property --tw-space-y-reverse {
   syntax: "*";
   inherits: false;
   initial-value: 0;
 }
-@property --tw-border-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @property --tw-font-weight {
   syntax: "*";
   inherits: false;
-}
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
 }
 @property --tw-duration {
   syntax: "*";
@@ -322,9 +283,7 @@
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
       --tw-space-y-reverse: 0;
-      --tw-border-style: solid;
       --tw-font-weight: initial;
-      --tw-outline-style: solid;
       --tw-duration: initial;
     }
   }
